--- a/Midterm_report/Midterm_report.tex
+++ b/Midterm_report/Midterm_report.tex
@@ -371,7 +371,7 @@ Since the THC-cromwell matrix is not a $n\times n$ matrix, we consider H-deletio
 Now, we are going to count n, which is the number of times $1$s in edge-columns is included in Three-rows.
 \begin{enumerate}
     \item \textbf{When $n = 0$}\\
-    T-shaped figure is given.
+    The grid diagram represents the graph consisted of a vertex and other three vertices with three edges connecting a vertex with the others.
     \item \textbf{1 (middle vertex)}\\
     Line-shaped figure is given.
     \item \textbf{1 (end vertex)}\\
