--- a/Midterm_report/Midterm_report.tex
+++ b/Midterm_report/Midterm_report.tex
@@ -548,7 +548,7 @@ Using the Theorem 1, we obtain the following corollary.
 \end{corol}
 
 \begin{proof}
-    Since $L$ is alternating and non-split link, $\alpha(L)=c(L)+2$ by Theorem 1. Thus, \[\alpha(H) \geq \alpha(L)+1 = \left( c(L)+2 \right)+1 = c(L)+3\] according to Proposition 1.
+    Since $L$ is alternating and non-split link, then $\alpha(L)=c(L)+2$ by Theorem 1. Thus, \[\alpha(H) \geq \alpha(L)+1 = \left( c(L)+2 \right)+1 = c(L)+3\] according to Proposition 1.
 \end{proof}
 
 Combining the above corollary and the corollary of Theorem 2, we have the following theorem.
