--- a/Midterm_report/Midterm_report.tex
+++ b/Midterm_report/Midterm_report.tex
@@ -368,7 +368,7 @@ Since it is upper triangular matrix, we can obtain determinant by trace. Hence t
 
 \item \textbf{Proof in the case of theta-curve}\\
 Since the THC-cromwell matrix is not a $n\times n$ matrix, we consider H-deletion matrix of THC-cromwell matrix. 
-Now, we are going to count n, which is the number of times $1$s in edge-columns is included in Three-rows.
+Now, we are going to count n, which is the number of $1$s in edge-columns which is also included in Three-rows.
 \begin{enumerate}
     \item \textbf{When $n = 0$}\\
     The grid diagram represents the graph consisted of a vertex and other three vertices with three edges connecting a vertex with the others.
